// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTypescriptForSchema > Auth key pattern 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminAbc;

export type AdminAbcFields = Record<never, never>;

export type AdminAbc = AdminEntity<'Abc', AdminAbcFields, 'a'|'b'|'c'>;

export function isAdminAbc(entity: AdminEntity<string, object>): entity is AdminAbc {
  return entity.info.type === 'Abc';
}

export function assertIsAdminAbc(entity: AdminEntity<string, object>): asserts entity is AdminAbc {
  if (entity.info.type !== 'Abc') {
    throw new Error('Expected info.type = Abc (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Booleans 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminBooleans;

export interface AdminBooleansFields {
  boolean: boolean | null;
  booleanList: boolean[] | null;
}

export type AdminBooleans = AdminEntity<'Booleans', AdminBooleansFields, ''>;

export function isAdminBooleans(entity: AdminEntity<string, object>): entity is AdminBooleans {
  return entity.info.type === 'Booleans';
}

export function assertIsAdminBooleans(entity: AdminEntity<string, object>): asserts entity is AdminBooleans {
  if (entity.info.type !== 'Booleans') {
    throw new Error('Expected info.type = Booleans (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Component (no fields) 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, Component } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminComponents;

export interface AdminComponentsFields {
  component: AppAdminComponent | null;
}

export type AdminComponents = AdminEntity<'Components', AdminComponentsFields, ''>;

export function isAdminComponents(entity: AdminEntity<string, object>): entity is AdminComponents {
  return entity.info.type === 'Components';
}

export function assertIsAdminComponents(entity: AdminEntity<string, object>): asserts entity is AdminComponents {
  if (entity.info.type !== 'Components') {
    throw new Error('Expected info.type = Components (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = AdminFoo;

export type AdminFooFields = Record<never, never>;

export type AdminFoo = Component<'Foo', AdminFooFields>;

export function isAdminFoo(component: Component<string, object> | AdminFoo): component is AdminFoo {
  return component.type === 'Foo';
}

export function assertIsAdminFoo(component: Component<string, object> | AdminFoo): asserts component is AdminFoo {
  if (component.type !== 'Foo') {
    throw new Error('Expected type = Foo (but was ' + component.type + ')');
  }
}
"
`;

exports[`generateTypescriptForSchema > Components 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, Component } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminComponentTypes;

export interface AdminComponentTypesFields {
  component: AppAdminComponent | null;
  componentFoo: AdminFoo | null;
  componentFooBar: AdminBar | AdminFoo | null;
  componentList: AppAdminComponent[] | null;
  componentListFoo: AdminFoo[] | null;
  componentListFooBar: (AdminBar | AdminFoo)[] | null;
}

export type AdminComponentTypes = AdminEntity<'ComponentTypes', AdminComponentTypesFields, ''>;

export function isAdminComponentTypes(entity: AdminEntity<string, object>): entity is AdminComponentTypes {
  return entity.info.type === 'ComponentTypes';
}

export function assertIsAdminComponentTypes(entity: AdminEntity<string, object>): asserts entity is AdminComponentTypes {
  if (entity.info.type !== 'ComponentTypes') {
    throw new Error('Expected info.type = ComponentTypes (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = AdminBar | AdminFoo;

export interface AdminBarFields {
  string: string | null;
}

export type AdminBar = Component<'Bar', AdminBarFields>;

export function isAdminBar(component: Component<string, object> | AdminBar): component is AdminBar {
  return component.type === 'Bar';
}

export function assertIsAdminBar(component: Component<string, object> | AdminBar): asserts component is AdminBar {
  if (component.type !== 'Bar') {
    throw new Error('Expected type = Bar (but was ' + component.type + ')');
  }
}

export interface AdminFooFields {
  string: string | null;
}

export type AdminFoo = Component<'Foo', AdminFooFields>;

export function isAdminFoo(component: Component<string, object> | AdminFoo): component is AdminFoo {
  return component.type === 'Foo';
}

export function assertIsAdminFoo(component: Component<string, object> | AdminFoo): asserts component is AdminFoo {
  if (component.type !== 'Foo') {
    throw new Error('Expected type = Foo (but was ' + component.type + ')');
  }
}
"
`;

exports[`generateTypescriptForSchema > EntityTypes 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, EntityReference } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminEntityTypes;

export interface AdminEntityTypesFields {
  entityType: EntityReference | null;
  entityTypeList: EntityReference[] | null;
}

export type AdminEntityTypes = AdminEntity<'EntityTypes', AdminEntityTypesFields, ''>;

export function isAdminEntityTypes(entity: AdminEntity<string, object>): entity is AdminEntityTypes {
  return entity.info.type === 'EntityTypes';
}

export function assertIsAdminEntityTypes(entity: AdminEntity<string, object>): asserts entity is AdminEntityTypes {
  if (entity.info.type !== 'EntityTypes') {
    throw new Error('Expected info.type = EntityTypes (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Foo (no fields) 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminFoo;

export type AdminFooFields = Record<never, never>;

export type AdminFoo = AdminEntity<'Foo', AdminFooFields, ''>;

export function isAdminFoo(entity: AdminEntity<string, object>): entity is AdminFoo {
  return entity.info.type === 'Foo';
}

export function assertIsAdminFoo(entity: AdminEntity<string, object>): asserts entity is AdminFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Locations 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, Location } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminLocations;

export interface AdminLocationsFields {
  location: Location | null;
  locationList: Location[] | null;
}

export type AdminLocations = AdminEntity<'Locations', AdminLocationsFields, ''>;

export function isAdminLocations(entity: AdminEntity<string, object>): entity is AdminLocations {
  return entity.info.type === 'Locations';
}

export function assertIsAdminLocations(entity: AdminEntity<string, object>): asserts entity is AdminLocations {
  if (entity.info.type !== 'Locations') {
    throw new Error('Expected info.type = Locations (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Numbers 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminNumbers;

export interface AdminNumbersFields {
  number: number | null;
  numberInteger: number | null;
  numberList: number[] | null;
  numberIntegerList: number[] | null;
}

export type AdminNumbers = AdminEntity<'Numbers', AdminNumbersFields, ''>;

export function isAdminNumbers(entity: AdminEntity<string, object>): entity is AdminNumbers {
  return entity.info.type === 'Numbers';
}

export function assertIsAdminNumbers(entity: AdminEntity<string, object>): asserts entity is AdminNumbers {
  if (entity.info.type !== 'Numbers') {
    throw new Error('Expected info.type = Numbers (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > RichTexts 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, RichText } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminRichTexts;

export interface AdminRichTextsFields {
  richText: RichText | null;
  richTextList: RichText[] | null;
}

export type AdminRichTexts = AdminEntity<'RichTexts', AdminRichTextsFields, ''>;

export function isAdminRichTexts(entity: AdminEntity<string, object>): entity is AdminRichTexts {
  return entity.info.type === 'RichTexts';
}

export function assertIsAdminRichTexts(entity: AdminEntity<string, object>): asserts entity is AdminRichTexts {
  if (entity.info.type !== 'RichTexts') {
    throw new Error('Expected info.type = RichTexts (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Strings 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminStrings;

export interface AdminStringsFields {
  string: string | null;
  stringList: string[] | null;
  values: 'bar' | 'baz' | 'foo' | null;
  valuesList: ('bar' | 'baz' | 'foo')[] | null;
}

export type AdminStrings = AdminEntity<'Strings', AdminStringsFields, ''>;

export function isAdminStrings(entity: AdminEntity<string, object>): entity is AdminStrings {
  return entity.info.type === 'Strings';
}

export function assertIsAdminStrings(entity: AdminEntity<string, object>): asserts entity is AdminStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > Unique index 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = 'slug';

export type AppAdminEntity = AdminStrings;

export interface AdminStringsFields {
  string: string | null;
}

export type AdminStrings = AdminEntity<'Strings', AdminStringsFields, ''>;

export function isAdminStrings(entity: AdminEntity<string, object>): entity is AdminStrings {
  return entity.info.type === 'Strings';
}

export function assertIsAdminStrings(entity: AdminEntity<string, object>): asserts entity is AdminStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema > empty 1`] = `
"import type { AdminClient, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminComponent, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = never;

export type AppAdminComponent = never;
"
`;

exports[`generateTypescriptForSchema published > Auth key pattern 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = PublishedAbc;

export type PublishedAbcFields = Record<never, never>;

export type PublishedAbc = PublishedEntity<'Abc', PublishedAbcFields, 'a'|'b'|'c'>;

export function isPublishedAbc(entity: PublishedEntity<string, object>): entity is PublishedAbc {
  return entity.info.type === 'Abc';
}

export function assertIsPublishedAbc(entity: PublishedEntity<string, object>): asserts entity is PublishedAbc {
  if (entity.info.type !== 'Abc') {
    throw new Error('Expected info.type = Abc (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedComponent = never;
"
`;

exports[`generateTypescriptForSchema published > Unique index 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = 'slug';

export type AppPublishedEntity = PublishedStrings;

export interface PublishedStringsFields {
  string: string | null;
}

export type PublishedStrings = PublishedEntity<'Strings', PublishedStringsFields, ''>;

export function isPublishedStrings(entity: PublishedEntity<string, object>): entity is PublishedStrings {
  return entity.info.type === 'Strings';
}

export function assertIsPublishedStrings(entity: PublishedEntity<string, object>): asserts entity is PublishedStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedComponent = never;
"
`;

exports[`generateTypescriptForSchema published > adminOnly entity type 1`] = `
"import type { PublishedClient, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = never;

export type AppPublishedComponent = never;
"
`;

exports[`generateTypescriptForSchema published > adminOnly field 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = PublishedFoo;

export type PublishedFooFields = Record<never, never>;

export type PublishedFoo = PublishedEntity<'Foo', PublishedFooFields, ''>;

export function isPublishedFoo(entity: PublishedEntity<string, object>): entity is PublishedFoo {
  return entity.info.type === 'Foo';
}

export function assertIsPublishedFoo(entity: PublishedEntity<string, object>): asserts entity is PublishedFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedComponent = never;
"
`;

exports[`generateTypescriptForSchema published > empty 1`] = `
"import type { PublishedClient, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = never;

export type AppPublishedComponent = never;
"
`;

exports[`generateTypescriptForSchema published > required fields 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedComponent, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = PublishedFoo;

export interface PublishedFooFields {
  string: string;
  stringList: string[];
}

export type PublishedFoo = PublishedEntity<'Foo', PublishedFooFields, ''>;

export function isPublishedFoo(entity: PublishedEntity<string, object>): entity is PublishedFoo {
  return entity.info.type === 'Foo';
}

export function assertIsPublishedFoo(entity: PublishedEntity<string, object>): asserts entity is PublishedFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedComponent = never;
"
`;
